--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "rnvtop"
-version = "0.1.3"
+version = "0.1.4"
 description = "General Nvidia GPU monitoring"
 edition = "2024"
 license = "MIT"
 
 [dependencies]
+bytesize = "2.1.0"
 chrono = "0.4.42"
 crossterm = "0.29.0"
 nvml-wrapper = "0.11.0"
