--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rnvtop"
-version = "0.2.5"
+version = "0.2.6"
 description = "General Nvidia GPU monitoring"
 edition = "2024"
 license = "MIT"
@@ -11,4 +11,6 @@ chrono = "0.4.42"
 clap = { version = "4.5.49", features = ["derive"] }
 crossterm = "0.29.0"
 nvml-wrapper = "0.11.0"
-owo-colors = "4.2.3"
+owo-colors = { version = "4.2.3", features = ["supports-colors"] }
+#nvml-wrapper = "0.11.0"
+#owo-colors = { version = "4.2.3" }
