--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rnvtop"
-version = "0.2.8"
+version = "0.3.0"
 description = "General Nvidia GPU monitoring"
 edition = "2024"
 license = "MIT"
@@ -12,5 +12,7 @@ clap = { version = "4.5.49", features = ["derive"] }
 crossterm = "0.29.0"
 nvml-wrapper = "0.11.0"
 owo-colors = { version = "4.2.3", features = ["supports-colors"] }
-#nvml-wrapper = "0.11.0"
-#owo-colors = { version = "4.2.3" }
+serde = { version = "1.0.228", features = ["derive"]}
+serde_json = "1.0.145"
+# tabled = "0.20.0"
+# strum = { version = "0.27.2", features = ["derive"]}
