--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rnvtop"
-version = "0.3.1"
+version = "0.3.2"
 description = "General Nvidia GPU monitoring"
 edition = "2024"
 license = "MIT"
@@ -9,6 +9,7 @@ license = "MIT"
 bytesize = "2.1.0"
 chrono = "0.4.42"
 clap = { version = "4.5.49", features = ["derive"] }
+colored_json = "5.0.0"
 crossterm = "0.29.0"
 nvml-wrapper = "0.11.0"
 owo-colors = { version = "4.2.3", features = ["supports-colors"] }
