Updated the error handling so if the computer doesn't have an Nvidia card or drivers installed, it will just print an error message rather than panicing. we hate panicing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "rnvtop"
-version = "1.1.1"
+version = "1.2.0"
 description = "General Nvidia GPU monitoring"
 edition = "2024"
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0.100"
 bytesize = "2.1.0"
 chrono = "0.4.42"
 clap = { version = "4.5.49", features = ["derive"] }
